--- a/templates/allauth/account/email.html
+++ b/templates/allauth/account/email.html
@@ -5,6 +5,8 @@
 {% block head_title %}{% trans "E-mail Addresses" %}{% endblock %}
 
 {% block content %}
+<div class="auth-background background-overlay"></div>
+<div class="auth-block-content">
     <h1>{% trans "E-mail Addresses" %}</h1>
 {% if user.emailaddress_set.all %}
 <p>{% trans 'The following e-mail addresses are associated with your account:' %}</p>
@@ -55,6 +57,8 @@
   {% endif %}
 
 {% endblock %}
+</div>
+
 
 
 {% block extra_body %}
