--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -6,6 +6,8 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
+<div class="auth-background background-overlay"></div>
+<div class="auth-block-content">
 <h1>{% trans "Sign Up" %}</h1>
 
 
@@ -20,5 +22,5 @@
     {% endif %}
     <button type="submit">{% trans "Sign Up" %} &raquo;</button>
 </form>
-
+</div>
 {% endblock %}
