--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,24 +1,17 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block page_header %}
-<div class="container header-container">
-    <div class="row">
-        <div class="col"></div>
-    </div>
-</div>
-{% endblock %}
-
 {% block content %}
-<div class="container h-100">
-    <div class="row h-100">
-        <div class="col-7 col-md-6 my-auto">
+<div class="home-background background-overlay"></div>
+<div class="container">
+    <div class="row">
+        <div class="col-7 col-md-6">
             <h1 class="display-4 ">
                 Welcome in the store
             </h1>
             <div class="my-5">
                 <h4>
-                    <a href="{% url 'products' 'All' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
+                    <a href="{% url 'products' 'All' %}" class="btn btn-green text-uppercase text-dark"><strong>Shop Now</strong></a>
                 </h4>
                 <hr>
             </div>
