--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -2,15 +2,10 @@
 {% load static %}
 {% load unicorn %}
 {% csrf_token %}
-{% block page_header %}
-<div class="container header-container">
-    <div class="row">
-        <div class="col"></div>
-    </div>
-</div>
-{% endblock %}
 
 {% block content %}
+<div class="products-background background-overlay"></div>
+
 <div class="container">
     <div class="row g-0">
         <div class="col-7 col-md-6">
