--- a/profiles/static/profiles/css/profiles.css
+++ b/profiles/static/profiles/css/profiles.css
@@ -1,4 +1,9 @@
 .user_profile_image {
-    width: 300px;
-    height: 300px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+
+.profile-body{
+    position: relative;
 }
