--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,29 +1,16 @@
+{%extends "base.html"%}
 {% load i18n %}
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block head_title %}{% endblock %}</title>
-    {% block extra_head %}
-    {% endblock %}
-</head>
-
-<body>
-    {% block body %}
-
+{% block body %}
     {% if messages %}
-    <div>
-        <strong>{% trans "Messages:" %}</strong>
-        <ul>
-            {% for message in messages %}
-            <li>{{message}}</li>
-            {% endfor %}
-        </ul>
-    </div>
+        <div>
+            <strong>{% trans "Messages:" %}</strong>
+            <ul>
+                {% for message in messages %}
+                    <li>{{message}}</li>
+                {% endfor %}
+            </ul>
+        </div>
     {% endif %}
-
     <div>
         <strong>{% trans "Menu:" %}</strong>
         <ul>
@@ -34,14 +21,10 @@
             <li><a href="{% url 'account_login' %}">{% trans "Sign In" %}</a></li>
             <li><a href="{% url 'account_signup' %}">{% trans "Sign Up" %}</a></li>
             {% endif %}
-
         </ul>
     </div>
     {% block content %}
     {% endblock %}
-    {% endblock %}
     {% block extra_body %}
     {% endblock %}
-</body>
-
-</html>
+{% endblock %}
