--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -5,7 +5,8 @@
 
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 {% block content %}
-
+<div class="auth-background background-overlay"></div>
+<div class="auth-block-content">
 <h1>{% trans "Sign In" %}</h1>
 {% get_providers as socialaccount_providers %}
 {% if socialaccount_providers %}
@@ -17,7 +18,6 @@
 
 <div class="socialaccount_ballot">
     <ul class="socialaccount_providers">
-        <a href="{% provider_login_url 'facebook' method='js_sdk' %}">Facebook OAuth2</a>
         {% include "socialaccount/snippets/provider_list.html" with process="login" %}
     </ul>
     <div class="login-or">{% trans 'or' %}</div>
@@ -33,10 +33,10 @@
     {% csrf_token %}
     {{ form.as_p }}
     {% if redirect_field_value %}
-    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
     {% endif %}
     <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
     <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
 </form>
-
+</div>
 {% endblock %}
