--- a/templates/allauth/account/verified_email_required.html
+++ b/templates/allauth/account/verified_email_required.html
@@ -5,6 +5,8 @@
 {% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
 
 {% block content %}
+<div class="auth-background background-overlay"></div>
+<div class="auth-block-content">
 <h1>{% trans "Verify Your E-mail Address" %}</h1>
 
 {% url 'account_email' as email_url %}
@@ -16,8 +18,6 @@ verify ownership of your e-mail address. {% endblocktrans %}</p>
 <p>{% blocktrans %}We have sent an e-mail to you for
 verification. Please click on the link inside that e-mail. If you do not see the verification e-mail in your main inbox, check your spam folder. Otherwise
 contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
-
 <p>{% blocktrans %}<strong>Note:</strong> you can still <a href="{{ email_url }}">change your e-mail address</a>.{% endblocktrans %}</p>
-
-
+</div>
 {% endblock %}
