--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -7,22 +7,17 @@
 
 <div class="container profile-body">
     {% if user.is_authenticated %}
-        <form action="{% url 'profiles' %}" method="POST">
+        <form action="{% url 'profiles' %}" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
-            {{ user_profile_form.phone_number | as_crispy_field }}
-            {{ user_profile_form.postcode | as_crispy_field }}
-            {{ user_profile_form.town_or_city | as_crispy_field }}
-            {{ user_profile_form.address1 | as_crispy_field }}
-            {{ user_profile_form.address2 | as_crispy_field }}
-            {{ user_profile_form.county | as_crispy_field }}
-            <input type="file" id="myFile" name="profile_image">
-            <button type="submit">Upload</button>
+            {% for field in form %}
+                {% if field.name == 'profile_image' %}
+                    {{ field }}
+                {% else %}
+                    {{ field | as_crispy_field }}
+                {% endif %}
+            {% endfor %}
+            <button type="submit" class="btn btn-green">Update Details</button>
         </form>
-        {% if user_profile.profile_image %}
-            <img src="{{user_profile.profile_image.url}}" alt="profile image" class="user_profile_image">
-        {% else %}
-            <img src="{{user_profile.google_profile_image}}" alt="google profile image" class="user_profile_image">
-        {% endif %}
         <br>
         <br>
         <br>
@@ -37,11 +32,17 @@
         <br>
         {% get_social_accounts user as accounts %}
         {% if accounts %}
-        <p> Connected accounts:
-            {% for field in accounts.google %}
-            <strong>{{ field.extra_data.name }} <i class="fa-brands fa-google"></i></strong>
-            {% endfor %}
-        </p>
+        <div class="row g-0">
+            <div class="col-12 col-md-3">
+                <p>Connected account</p>
+            </div>
+            <div class="col-12 col-md-9">
+                <img src="{{user_profile.google_profile_image}}" alt="google profile image" class="user_profile_image"><br>
+                {% for field in accounts.google %}
+                <strong>{{ field.extra_data.name }} <i class="fa-brands fa-google"></i></strong>
+                {% endfor %}<br>
+            </div>
+        </div>
         {% endif %}
         <button class="btn btn-green"> <a href="{% url 'socialaccount_connections' %}">Manage Social Accounts:</a></button>
     {% else %}
@@ -51,4 +52,10 @@
         </div>
     {% endif %}
 </div>
+<script type="text/javascript">
+    $('#new-image').change(function() {
+        var file = $('#new-image')[0].files[0];
+        $('#filename').text(`Image will be set to: ${file.name}`);
+    });
+</script>
 {% endblock %}
