--- a/static/css/base.css
+++ b/static/css/base.css
@@ -86,9 +86,7 @@ footer{
 }
 
 /* buttons */
-button > a{
-    width:100%;
-    height:100%;
+.btn > a{
     text-decoration: none;
     color:inherit;
 }
