--- a/templates/allauth/socialaccount/connections.html
+++ b/templates/allauth/socialaccount/connections.html
@@ -11,23 +11,20 @@
         <form method="post" action="{% url 'socialaccount_connections' %}" class="table-bordered">
             {% csrf_token %}
             <div class="input-group"
-              {% if form.non_field_errors %}
-                <div id="errorMsg">{{ form.non_field_errors }}</div>
+                {% if form.non_field_errors %}
+                    <div id="errorMsg">{{ form.non_field_errors }}</div>
                 {% endif %}
                 {% for base_account in form.accounts %}
-                {% with base_account.get_provider_account as account %}
-                <div class="form-control">
-                    <label for="id_account_{{ base_account.id }}">
-                        <input id="id_account_{{ base_account.id }}" type="checkbox" name="account" value="{{ base_account.id }}"/>
-                        <strong>{{ account }}</strong> &nbsp <i class="fa-brands fa-google"></i> &nbsp <i class="fas fa-check"></i>
-                    </label>
-                </div>
-                {% endwith %}
+                    {% with base_account.get_provider_account as account %}
+                        <div class="form-control">
+                            <label for="id_account_{{ base_account.id }}">
+                                <input id="id_account_{{ base_account.id }}" type="checkbox" name="account" value="{{ base_account.id }}"/>
+                                <strong>{{ account }}</strong> &nbsp <i class="fa-brands fa-google"></i> &nbsp <i class="fas fa-check"></i>
+                            </label>
+                        </div>
+                    {% endwith %}
                 {% endfor %}
-                <div>
-                    <button class="btn btn-danger" type="submit">{% trans 'Remove' %}</button>
-                </div>
-            </div>
+            <button class="btn btn-danger" type="submit">{% trans 'Remove' %}</button>
         </form>
     {% else %}
         <p>{% trans 'You currently have no social network accounts connected to this account.' %}</p>
@@ -41,6 +38,10 @@
     </div>
     {% include "socialaccount/snippets/login_extra.html" %}
     {% endif %}
+    <br>
+    <br>
+    <br>
+    <button class="btn btn-green"><a href="{% url 'profiles' %}">{% trans 'Back to your Profile' %}</a></button>
 
 </div>
 {% endblock %}
