--- a/templates/base.html
+++ b/templates/base.html
@@ -86,7 +86,7 @@
                 </li>
                 {% endif %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'profiles' %}">Profile</a>
+                    <a class="nav-link" href="{% url 'profile' %}">Profile</a>
                 </li>
             </ul>
             {% unicorn 'bagstatus' %}
