--- a/products/templates/unicorn/product.html
+++ b/products/templates/unicorn/product.html
@@ -79,12 +79,12 @@
             </div>
         </div>
         <div class="col-3 quantity-widget">
-            <button class="increment-qty btn form-control" u:click="increment_component_quantity">
+            <button class="increment-qty btn form-control text-light" u:click="increment_component_quantity">
                 <i class="fas fa-arrow-up"></i>
             </button>
-            <input class="form-control" type="number" disabled
+            <input class="form-control" type="number" readonly
                 name="quantity" value="{{component_quantity}}" min="1" max="99">
-            <button class="decrement-qty btn form-control" u:click="decrement_component_quantity">
+            <button class="decrement-qty btn form-control text-light" u:click="decrement_component_quantity">
                 <i class="fas fa-arrow-down"></i>
             </button>
         </div>
