--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -7,7 +7,7 @@
 
 <div class="container profile-body">
     {% if user.is_authenticated %}
-        <form action="{% url 'profiles' %}" method="POST" enctype="multipart/form-data">
+        <form action="{% url 'profile' %}" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             {% for field in form %}
                 {% if field.name == 'profile_image' %}
@@ -45,6 +45,53 @@
         </div>
         {% endif %}
         <button class="btn btn-green"> <a href="{% url 'socialaccount_connections' %}">Manage Social Accounts:</a></button>
+
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="col-12 col-lg-6">
+                <h1 class="">Order History</h1>
+                <div class="order-history table-responsive">
+                    <table class="table table-sm table-borderless text-secondary">
+                        <thead>
+                            <tr>
+                                <th>Order Number</th>
+                                <th>Date</th>
+                                <th>Items</th>
+                                <th>Order Total</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for order in orders %}
+                                <tr>
+                                    <td>
+                                        <a href="{% url 'order_history' order.order_number %}"
+                                        title="{{ order.order_number }}">
+                                            {{ order.order_number|truncatechars:6 }}
+                                        </a>
+                                    </td>
+                                    <td>{{ order.date }}</td>
+                                    <td>
+                                        <ul class="list-unstyled">
+                                            {% for item in order.lineitems.all %}
+                                                <li class="small">
+                                                    {% if item.product.has_sizes %}
+                                                        Size {{ item.product.size|upper }}
+                                                    {% endif %}{{ item.product.name }} x{{ item.quantity }}
+                                                </li>
+                                            {% endfor %}
+                                        </ul>
+                                    </td>
+                                    <td>${{ order.grand_total }}</td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
     {% else %}
         <div class="container">
             <h1 class="display-4"> In order to have a profile you must have an account</h1>
