added messages toasts, styled navbar and buttons across the project. modified product.py component view to add quantity properly when adding a product

--- a/bag/templates/unicorn/bagstatus.html
+++ b/bag/templates/unicorn/bagstatus.html
@@ -9,7 +9,7 @@
                     $0.00
                     {% endif %}
                 </p>
-                <a href="{% url 'bag' %}" class="btn btn-gate">View Bag</a>
+                <a href="{% url 'bag' %}" class="btn btn-blue">View Bag</a>
             </div>
     </li>
 </div>
