--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -11,7 +11,7 @@
             </h1>
             <div class="my-5">
                 <h4>
-                    <a href="{% url 'products' 'All' %}" class="btn btn-green text-uppercase text-dark"><strong>Shop Now</strong></a>
+                    <a href="{% url 'products' 'All' %}" class="btn btn-green text-uppercase"><strong>Shop Now</strong></a>
                 </h4>
                 <hr>
             </div>
