--- a/templates/allauth/socialaccount/connections.html
+++ b/templates/allauth/socialaccount/connections.html
@@ -41,7 +41,7 @@
     <br>
     <br>
     <br>
-    <button class="btn btn-green"><a href="{% url 'profiles' %}">{% trans 'Back to your Profile' %}</a></button>
+    <button class="btn btn-green"><a href="{% url 'profile' %}">{% trans 'Back to your Profile' %}</a></button>
 
 </div>
 {% endblock %}
