--- a/home/templates/unicorn/nav_categories.html
+++ b/home/templates/unicorn/nav_categories.html
@@ -2,15 +2,16 @@
 
     <button class="dropdown-item" type="button">
         {% if category_name == 'All' %}
-            <a class="nav-link text-dark" href="{% url 'products' 'All' %}"><strong>All Products</strong></a>
+            <a class="nav-link text-dark rounded" href="{% url 'products' 'All' %}" style="border: 1px solid black"><strong>All Products</strong></a>
         {% else %}
-            <a class="nav-link" href="{% url 'products' 'All' %}">All Products</a>
+            <a class="nav-link rounded" href="{% url 'products' 'All' %}">All Products</a>
         {% endif %}
     </button>
     {% for category in categories %}
         <button class="dropdown-item" type="button">
+
             {% if category_name == category.name %}
-            <a class="nav-link" href="{% url 'products' category.name%}"><strong>{{ category.name }}</strong></a>
+            <a class="nav-link rounded" href="{% url 'products' category.name%}" style="border: 1px solid black"><strong>{{ category.name }}</strong></a>
             {% else %}
                 <a class="nav-link" href="{% url 'products' category.name%}">{{ category.name }}</a>
         </button>
