--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -10,13 +10,7 @@
     </div>
 </div>
 {% endblock %}
-
 {% block content %}
-{% if messages %}
-    {% for message in messages %}
-        <p> {{message}} </p>
-    {% endfor %}
-{% endif %}
 <div class="container">
     <div class="row g-0">
         <div class="col-6">
@@ -33,8 +27,8 @@
                 {% endfor %}
                 {% unicorn 'size_by_sizecategory_choice_field' product=product %}
                 <div class="text-right">
-                    <a class="btn btn-outline-black rounded-0" href="{% url 'admin_crud_products' %}">Go Back</a>
-                    <button class="btn btn-black rounded-0" type="submit">Edit Product</button>
+                    <a class="btn text-warning" href="{% url 'admin_crud_products' %}">Go Back</a>
+                    <button class="btn text-success" type="submit">Edit Product</button>
                 </div>
             </form>
         </div>
