--- a/products/templates/unicorn/product.html
+++ b/products/templates/unicorn/product.html
@@ -82,7 +82,7 @@
             <button class="increment-qty btn form-control text-light" u:click="increment_component_quantity">
                 <i class="fas fa-arrow-up"></i>
             </button>
-            <input class="form-control" type="number" readonly
+            <input class="form-control quantity-readonly" type="number" readonly
                 name="quantity" value="{{component_quantity}}" min="1" max="99">
             <button class="decrement-qty btn form-control text-light" u:click="decrement_component_quantity">
                 <i class="fas fa-arrow-down"></i>
