--- a/templates/base.html
+++ b/templates/base.html
@@ -27,11 +27,15 @@
     {% endblock %}
 
     {% block extra_css %}
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     {% endblock %}
 
     {% block corejs %}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
+        integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
@@ -59,57 +63,63 @@
             <i class="fa-solid fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="dropdown">
+                <button class="btn btn-blue dropdown-toggle" type="button" id="products" data-toggle="dropdown" aria-haspopup="true"
+                    aria-expanded="false">
+                    Products
+                </button>
+                {% unicorn 'nav_categories' %}
+            </div>
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" id="/home" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" id="/home" href="{% url 'home' %}">Home <span
+                            class="sr-only">(current)</span></a>
                 </li>
                 {% if user.is_authenticated %}
-                    {% if user.is_superuser  %}
-                        <li class="nav-item">
-                            <a class="nav-link" id="/products/admin_crud_products" href="{% url 'admin_crud_products' %}">Manage Products</a>
-                        </li>
-                    {% endif %}
-                    <li class="nav-item active">
-                        <a class="nav-link" id='/accounts/logout/' href="{% url 'account_logout' %}">Logout <span class="sr-only">(current)</span></a>
-                    </li>
+                {% if user.is_superuser %}
+                <li class="nav-item">
+                    <a class="nav-link" id="/products/admin_crud_products" href="{% url 'admin_crud_products' %}">Manage
+                        Products</a>
+                </li>
+                {% endif %}
+                <li class="nav-item active">
+                    <a class="nav-link" id='/accounts/logout/' href="{% url 'account_logout' %}">Logout <span
+                            class="sr-only">(current)</span></a>
+                </li>
                 {% else %}
-                    <li class="nav-item active">
-                        <a class="nav-link" id="/accounts/login/" href="{% url 'account_login' %}">Login <span class="sr-only">(current)</span></a>
-                    </li>
+                <li class="nav-item active">
+                    <a class="nav-link" id="/accounts/login/" href="{% url 'account_login' %}">Login <span
+                            class="sr-only">(current)</span></a>
+                </li>
                 {% endif %}
                 <li class="nav-item">
                     <a class="nav-link" id="/profile/" href="{% url 'profile' %}">Profile</a>
                 </li>
             </ul>
-
-            <div class="dropdown">
-                <button class="btn btn-blue dropdown-toggle" type="button" id="products" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    Products
-                </button>
-                {% unicorn 'nav_categories' %}
-            </div>
         </div>
         <div>
-                {% unicorn 'bagstatus' %}
-            </div>
+            {% unicorn 'bagstatus' %}
+        </div>
     </nav>
     <section class="body-section container">
         {% if messages %}
-            {% with message.level as level %}
-                {% if level == 40 %}
-                    {% include 'includes/toasts/toast_error.html' %}
-                {% elif level == 30 %}
-                    {% include 'includes/toasts/toast_warning.html' %}
-                {% elif level == 25 %}
-                    {% include 'includes/toasts/toast_success.html' %}
-                {% else %}
-                    {% include 'includes/toasts/toast_info.html' %}
-                {% endif %}
-            {% endwith %}
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 offset-md-2">
+                    {% for message in messages %}
+                    <div class="alert {{ message.tags }} alert-dismissible fade show" id="msg" role="alert">
+                        {{ message | safe}}
+                        <button class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
         {% endif %}
+        <div class="position-relative">
         {% block content %}
         {% endblock %}
+        </div>
     </section>
     <footer>
         {% block footer %}
@@ -118,17 +128,17 @@
 
     {% block postloadjs %}
     <script>
-        let current_page_path = '{{ request.path }}'
-        current_page_path = current_page_path == '/' ? '/home' : current_page_path
+        let current_page_path = '{{ request.path }}';
+        current_page_path = current_page_path == '/' ? '/home' : current_page_path;
         for (let navlink of $('.nav-link')) {
             if (navlink.id == current_page_path) {
-                navlink.style.scale = "1.1"
-                navlink.style.color = $('#products').css('backgroundColor')
-                navlink.style.margin = "0 20px"
-                navlink.style.padding = "0 20"
+                navlink.style.scale = "1.1";
+                navlink.style.color = $('#products').css('backgroundColor');
+                navlink.style.margin = "0 20px";
+                navlink.style.padding = "0 20";
             }
-            if(current_page_path.split('/')[1] == 'products'){
-                $('#products').css('scale', '1.1')
+            if (current_page_path.split('/')[1] == 'products') {
+                $('#products').css('scale', '1.1');
             }
         }
         setTimeout(function () {
@@ -137,6 +147,11 @@
             alert.close();
         }, 2500);
     </script>
+
+    <script type="text/javascript">
+        $('.toast').toast('show');
+    </script>
+    
     <script type="text/javascript" src="{% static 'products/js/product_component_selectors.js' %}"></script>
     {% endblock %}
 </body>
