--- a/templates/base.html
+++ b/templates/base.html
@@ -122,8 +122,35 @@
         </div>
     </section>
     <footer>
-        {% block footer %}
-        {% endblock %}
+        <div class="row g-0 footer-row">
+            <div class="col-1 col-sm-2 col-lg-3"></div>
+            <!--spacing-->
+            <div class="col-10 col-sm-8 col-lg-6 links-divs-col">
+                <div class="row g-0 links-divs-row">
+                    <div class="col-4 social-link-div">
+                        <a href="https://www.instagram.com" target="_blank"><i
+                                class="fa-brands fa-instagram"></i></a>
+                    </div>
+                    <div class="col-4 social-link-div">
+                        <a href="https://www.youtube.com" target="_blank"><i
+                                class="fa-brands fa-youtube"></i></a>
+                    </div>
+                    <div class="col-4 social-link-div">
+                        <a href="https://www.tiktok.com" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-1 col-sm-2 col-lg-3"></div>
+            <!--spacing-->
+            <div class="col-1 col-sm-2 col-lg-3"></div>
+            <!--spacing-->
+            <div class="col-10 col-sm-8 col-lg-6 made-by-col">
+                <p>Made by Bogdan Branzaniuc</p>
+            </div>
+            <div class="col-1 col-sm-2 col-lg-3"></div>
+            <!--spacing-->
+        </div>
+    
     </footer>
 
     {% block postloadjs %}
