--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -200,11 +200,11 @@
                         <span class="text-uppercase">Back to Profile</span>
                     </a>
                 {% else %}
-                    <a href="{% url 'products' 'All'%}" class="btn btn-black rounded-0 my-2">
+                    <a href="{% url 'products' 'All'%}" class="btn btn-gate">
                         <span class="icon mr-2">
                             <i class="fas fa-gifts"></i>
                         </span>
-                        <span class="text-uppercase">Now check out the latest deals!</span>
+                        <span class="text-uppercase">Now check out the other products</span>
                     </a>
                 {% endif %}
 			</div>
