--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
 
 <head>
     <title>Handmade Daniela With passion{% block extra_title %}{% endblock %}</title>
+    <link rel="icon" type="image/x-icon" href="https://icons8.com/icon/80355/star">
     {% block meta %}
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta charset="utf-8">
