restructured the way we load static and unicorn scripts

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -1,9 +1,13 @@
 {% extends "base.html" %}
 {% load static %}
 {% load unicorn %}
-{% csrf_token %}
+
+{% block extra_js %}
+    {% unicorn_scripts %}
+{% endblock %}
 
 {% block content %}
+{% csrf_token %}
 <div class="bag-background background-overlay"></div>
 <div class="container bag-body">
     {% if messages %}
