--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -1,9 +1,14 @@
 {% extends "base.html" %}
+
 {% load static %}
 {% load unicorn %}
-{% csrf_token %}
+
+{% block extra_js %}
+    {% unicorn scripts %}
+{% endblock %}
 
 {% block content %}
+{% csrf_token %}
 <div class="products-background background-overlay"></div>
 
 <div class="container position-relative">
