--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -1,9 +1,12 @@
 {% extends "base.html" %}
 {% load static %}
 {% load unicorn %}
-{% csrf_token %}
+{% block extra_js %}
+    {% unicorn_scripts %}
+{% endblock %}
 
 {% block content %}
+{% csrf_token %}
 <div class="products-background background-overlay"></div>
 
 <div class="container position-relative">
