added key to product component

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -22,7 +22,7 @@
     <div class="row g-0">
         {% for product in products %}
         <div class="col-12 col-md-6 col-lg-6 col-xl-4">
-            {% unicorn 'product' product=product rgba_colors=available_rgba_colors size_units=size_units bag=bag %}
+            {% unicorn 'product' product=product rgba_colors=available_rgba_colors size_units=size_units key=product.id %}
         </div>
         {% endfor %}
     </div>
